[package]
name = "deno_argon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4"
deno_bindgen = "0.5.1"
serde = { version = "1", features = ["derive"] }
rand_core = { version = "0.6", features = ["std"] }

[lib]
name = "deno_argon2"
crate-type = ["dylib"]